start implemnt navgation with home and history screens

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,8 @@ target 'RunTest' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-viewpager', :path => '../node_modules/@react-native-community/viewpager'
+
   target 'RunTestTests' do
     inherit! :complete
     # Pods for testing
