--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/material-top-tabs": "^6.0.6",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-maps": "^0.30.1",
-    "react-native-maps-directions": "^1.8.0"
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-pager-view": "^5.4.9",
+    "react-native-tab-view": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
