--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-elements": "^3.4.2",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
-    "react-native-tab-view": "^3.1.1"
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
