--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "react": "17.0.2",
     "react-native": "0.66.4",
@@ -22,6 +23,7 @@
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.0.0"
   },
