--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+        compileSdkVersion   = 28
+        googlePlayServicesVersion = "17.0.0"
+  
     }
     repositories {
         google()
