--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.66.4",
     "react-native-accurate-step-counter": "^2.0.4",
     "react-native-elements": "^3.4.2",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-maps": "^0.30.1",
     "react-native-maps-directions": "^1.8.0",
     "react-native-pager-view": "^5.4.9",
